--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+    {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
 
     <div class="container">
         <div class="row">
@@ -76,5 +76,10 @@
             </div>
         </div>
     </div>
+
+        {{ form_end(form) }}
+
+
+
 
 
