création d'un système de partage de fichier et custom de la mise en page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,10 +7,22 @@
             <!-- Compiled and minified CSS -->
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
             <link rel="stylesheet" href="{{ asset('bundles/user/css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('bundles/share/css/style.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+
+         <!-- Menu-->
+        <nav>
+            <div class="nav-wrapper nav_top">
+                <a href="{{ path('share_homepage') }}" class="brand-logo"><img src="http://heksa.bloggnorge.com/files/2016/07/2000px-Oslo_T-bane_Logo.svg_-300x300.png"></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{ path('fos_user_profile_show') }}">User</a></li>
+                    <li><a href="{{ path('documents_index') }}">Documents</a></li>
+                </ul>
+            </div>
+        </nav>
 
         {% block body %}
 
